# paceapp

./: .env.example  .gitignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.worker.json  vite.config.ts  wrangler.toml
.github/workflows/: deploy-worker.yml  deploy.yml  refresh-metadata.yml
frontend/: App.tsx  detectWorkout.ts  elevationLookup.ts  fitness.ts  hillSprints.ts  index.css  labeller.ts  lapUtils.ts  parseFit.ts  routing.ts  segmentHistory.ts  segmenter.ts  storage.ts  synthesizeExtension.ts  types.ts
frontend/api/: client.ts  (+2 more)
scripts/: backfill-meta.ts
shared/: detectWorkout.ts  elevation.ts  hillSprints.ts  labeller.ts  lapStats.ts  lapUtils.ts  pace.ts  segmenter.ts  splits.ts  types.ts
src/: App.tsx  detectWorkout.ts  exportFit.ts  file-system.d.ts  fitness.ts  garmin-fitsdk.d.ts  labeller.ts  parseFit.ts  segmentHistory.ts  segmenter.ts  storage.ts  synthesizeExtension.ts  tsb.ts  types.ts
test/: chunking.test.ts  detectWorkout.test.ts  elevationLookup.test.ts  exportFit.test.ts  extendExport.test.ts  fitness.test.ts  hillSprints.test.ts  labeller.test.ts  mcpReconciliation.test.ts  pace.test.ts  parseFit.test.ts  priorLoad.test.ts  segmentHistory.test.ts  segmenter.test.ts  splits.test.ts  synthesize.test.ts  tags.test.ts  tsb.test.ts
wasm-fit/: Cargo.toml  README.md  bench.mjs  loadWasm.ts
wasm-fit/pkg/: .gitignore  wasm_fit.d.ts  wasm_fit.js  wasm_fit_bg.wasm  wasm_fit_bg.wasm.d.ts
wasm-fit/src/: lib.rs
workers/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
(+207 files in other folders)
