[package]
name = "wasm-fit"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fitparser = "0.10"
chrono = { version = "0.4", default-features = false, features = ["alloc", "wasmbind"] }
js-sys = "0.3"
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }

[features]
default = []
panic-hook = ["dep:console_error_panic_hook"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

# wasm-pack metadata: skip wasm-opt download; CI/dev hosts may be offline.
# `lto + opt-level=3 + strip` already gives most of the size savings.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
